# SelinuxAssistantProject2

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  sa_engine.cpp
app/src/main/cpp/include/: apk_analyzer.h  behavioral_analyzer.h  cloud_lookup.h  hash_engine.h  local_db.h  root_detector.h  scanner.h  syscall_table.h
app/src/main/cpp/src/: apk_analyzer.cpp  axml_parser.cpp  behavioral_rules.cpp  cloud_lookup.cpp  db_manager.cpp  dex_analyzer.cpp  hash_engine.cpp  jni_behavior_bridge.cpp  jni_bridge.cpp  jni_root_bridge.cpp  local_db.cpp  permission_db.cpp  ptrace_monitor.cpp  root_detector_part1.cpp  root_detector_part2.cpp  root_detector_part3.cpp  scanner.cpp  seccomp_monitor.cpp  syscall_table.cpp  zip_reader.cpp
app/src/main/java/com/selinuxassistant/guardx/: MainActivity.kt
app/src/main/java/com/selinuxassistant/guardx/engine/: AppScanner.kt  DebugDetector.kt  EngineUtils.kt  FileScanner.kt  HookDetector.kt  LocalIOCs.kt  NativeBridge.kt  NativeDetector.kt  RootDetector.kt  SaEngine.kt  Scanmodels.kt  SelinuxAnalyzer.kt
app/src/main/kotlin/com/selinuxassistant/guardx/: GuardXApp.kt  MainActivity.kt
app/src/main/kotlin/com/selinuxassistant/guardx/engine/: NativeEngine.kt
app/src/main/kotlin/com/selinuxassistant/guardx/model/: Models.kt
app/src/main/kotlin/com/selinuxassistant/guardx/service/: BootReceiver.kt  PlayIntegrityManager.kt  ScanRepository.kt  ScanService.kt  SecurityState.kt  TeeAttestationManager.kt
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
(+10 files in other folders)
